工作展示页面显示感兴趣的人数

--- a/app/views/jobs/_person_requires.html.slim
+++ b/app/views/jobs/_person_requires.html.slim
@@ -24,4 +24,4 @@
             | 可远程
         span.info.interest 
           span.fi-heart
-          | 8 个感兴趣
+          | #{person_require.users.size} 个感兴趣
