--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -6,7 +6,7 @@
 
   .row
     .small-12.columns
-      - if ! @recent_events.blank?
+      - if @recent_events.blank?
         p.no-content
           | 用户近七天暂无动态
       - else
