--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,7 +1,7 @@
 .row
   .small-12.medium-10.medium-centered.columns.top-blank
     .row
-      .small-12.medium-8.large-7.columns
+      .small-12.columns
         h2 忘记你的密码?
         p 找回密码
         = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
