--- a/app/views/users/funs/index.html.slim
+++ b/app/views/users/funs/index.html.slim
@@ -6,6 +6,10 @@
 
   .row
     .small-12.columns.funs
-      ul.small-block-grid-4.medium-block-grid-6.large-block-grid-8
-        = render partial: 'users/funs/fun', collection: @funs
-      = paginate @funs
+      - if @funs.blank?
+        p.no-content
+          | 暂无粉丝
+      - else
+        ul.small-block-grid-4.medium-block-grid-6.large-block-grid-8
+          = render partial: 'users/funs/fun', collection: @funs
+        = paginate @funs
