--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -36,4 +36,5 @@ li
       i.fi-address-book
     | 参与创业 
 li
-  = text_field_tag 'search', nil, placeholder: '搜索项目, 人', class: 'search'
+  form ng-submit='search($event)' ng-controller='AllSearchController'
+    input.search type='text' ng-model='q' placeholder='搜索项目, 人'
