--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -37,4 +37,4 @@ li
     | 参与创业 
 li
   form ng-submit='search($event)' ng-controller='AllSearchController'
-    input.search type='text' ng-model='q' ng-click='$event.stopPropagation()' placeholder='搜索项目, 人'
+    input.search type='text' ng-model='q' ng-init='q="#{@q}"' ng-click='$event.stopPropagation()' placeholder='搜索项目, 人'
