投资人的搜索

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -6,7 +6,7 @@
     font-weight: 200;
   }
 
-  .projects, .jobs {
+  .projects, .jobs, .investors {
     border-top: 1px solid #ddd;
     margin-bottom: 1.5rem;
   }
