--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -2,13 +2,14 @@
   | #{@project.name}
 .project-show.top-blank
   = render 'head'
-  .row.operate ng-controller='StarsController' ng-init='init(#{@project.id}, #{current_user.star?(@project)})'
-    .small-6.columns
-      a ng-click='add_star()' ng-hide='is_starred || loading' 关注
-      a ng-click='remove_star()' ng-show='is_starred && ! loading' 取消关注
-      a ng-show='loading' loading
-    .small-6.columns
-      = link_to '约谈', '#'
+  - if current_user
+    .row.operate ng-controller='StarsController' ng-init='init(#{@project.id}, #{current_user.try(:star?, @project)})'
+      .small-6.columns
+        a ng-click='add_star()' ng-hide='is_starred || loading' 关注
+        a ng-click='remove_star()' ng-show='is_starred && ! loading' 取消关注
+        a ng-show='loading' loading
+      .small-6.columns
+        = link_to '约谈', '#'
   = render partial: 'show_tab', locals: { type: 'basic' }
   .row.content
     .small-12.columns
