--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -3,13 +3,13 @@
 .project-show.top-blank
   = render 'head'
   - if current_user
-    .row.operate ng-controller='StarsController' ng-init='init(#{@project.id}, #{current_user.try(:star?, @project)})'
-      .small-6.columns
+    .row.operate
+      .small-6.columns ng-controller='StarsController' ng-init='init(#{@project.id}, #{current_user.try(:star?, @project)})'
         a ng-click='add_star()' ng-hide='is_starred || loading' 关注
         a ng-click='remove_star()' ng-show='is_starred && ! loading' 取消关注
         a ng-show='loading' loading
-      .small-6.columns
-        = link_to '约谈', '#'
+      .small-6.columns ng-controller='TalksController' ng-init='init(#{@project.id})'
+        a ng-click='talk()' 约谈
   = render partial: 'show_tab', locals: { type: 'basic' }
   .row.content
     .small-12.columns
