添加 timeline 项目中显示过长换行的问题

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -63,11 +63,18 @@
     .content {
       padding-bottom: 1rem;
       margin-bottom: 1rem;
+
+      .title-wrapper {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
       .title {
-        display: inline-block;
+        display: inline;
       }
       .sub-title {
-        display: inline-block;
+        display: inline;
         color: #888;
         padding-left: 1rem;
         font-size: 90%;
