--- a/app/views/home/_event_project_content.html.slim
+++ b/app/views/home/_event_project_content.html.slim
@@ -1,8 +1,9 @@
 .content
   .row
-    .small-4.large-2.columns
+    .small-3.large-2.columns
       = image_tag event.project.logo.image_url
-    .small-8.large-10.columns
-      h6.title #{event.project.name}
-      span.sub-title #{event.project.oneword}
+    .small-9.large-10.columns
+      .title-wrapper
+        h6.title #{event.project.name}
+        span.sub-title #{event.project.oneword}
       p.team.description #{event.project.description}
