--- a/app/assets/templates/directives/invest_button.html.slim
+++ b/app/assets/templates/directives/invest_button.html.slim
@@ -9,7 +9,7 @@
     button disabled=true 申请投资人后才能投资
     a.button href='/investors/new' 申请投资人资格
 
-  button ng-show='opened.syndicate.behave == "need_leader"' 领投约谈
+  button ng-show='opened.syndicate.behave == "need_leader"' ng-controller='TalksController' ng-init='init(false)' ng-click='open_talk("lead_talk", opened.id)' 领投约谈
   button ng-show='opened.syndicate.behave == "leader_confirming"' disabled=true 领投确认中
   button ng-show='opened.syndicate.behave == "leader_confirm"' ng-click='open_syndicate()' 我是领投人, 马上确认
   button ng-show='opened.syndicate.behave == "invest"' ng-click='open_syndicate()' 我要投资
