分享功能的实现

--- a/app/assets/stylesheets/components/project_head.css.scss
+++ b/app/assets/stylesheets/components/project_head.css.scss
@@ -1,14 +1,18 @@
 .project-show, .project-edit {
   .head {
-    padding-bottom: 2rem;
+    margin-bottom: 1rem;
     .name a {
       color: #FF2D2D;
+    }
+
+    p {
+      margin-bottom: 1rem;
     }
     
     .info {
       i[class^=fi-] {
         margin-right: 0.5rem;
-        margin-left: 0.5rem;
+        margin-left: 1rem;
 
         &:first-child {
           margin-left: 0;
