--- a/app/views/investors/idea.html.slim
+++ b/app/views/investors/idea.html.slim
@@ -12,6 +12,8 @@
             span.radio
               input type='radio' ng-model='investidea.coin_type' id="coin_type_value_#{type}" value="#{type}"
               label for='coin_type_value_#{type}' #{t('investidea.coin_types.'+ type)}
+          small.error.ng-cloak ng-show='errors.coin_type'
+            | {{ errors.coin_type }}
       .row
         .small-12.medium-6.columns
           .row.collapse
