--- a/app/views/layouts/_user_dropdown.html.slim
+++ b/app/views/layouts/_user_dropdown.html.slim
@@ -15,9 +15,11 @@
           li
             = link_to '申请投资人', basic_investors_path
         - elsif current_user.has_role?(:investor)
+          li 
+            = link_to '已经是认证投资人', info_investors_path
         - else
           li
-            = link_to '查看投资人进度', basic_investors_path
+            = link_to '查看投资人进度', info_investors_path
         li
           = link_to '我的主页', user_path(current_user)
         li
