--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -10,7 +10,7 @@
         li
           = link_to '创建项目', new_project_path
         li
-          = link_to '申请认证投资人', new_investor_path
+          = link_to '申请认证投资人', basic_investor_path
 
       .refine-projects-content
         .row
