--- a/app/assets/templates/directives/invest_button.html.slim
+++ b/app/assets/templates/directives/invest_button.html.slim
@@ -7,7 +7,7 @@
 
   .need-be-investor ng-show='opened.syndicate.behave == "need_be_investor"'
     button disabled=true 申请投资人后才能投资
-    a.button href='/investors/new' 申请投资人资格
+    a.button href='/investors/basic' 申请投资人资格
 
   button ng-show='opened.syndicate.behave == "need_leader"' ng-controller='TalksController' ng-init='init(false)' ng-click='open_talk("lead_talk", opened.id)' 领投约谈
   button ng-show='opened.syndicate.behave == "leader_confirming"' disabled=true 领投确认中
