无投资案例的描述修改

--- a/app/views/investors/show.html.slim
+++ b/app/views/investors/show.html.slim
@@ -28,7 +28,7 @@
           = @investor.description
         label 以往投资案例
         - if @investments.blank?
-          p.no-content 无以往皇家马德里资案例
+          p.no-content 无以往投资案例
         - else
           ul.small-block-grid-1.medium-block-grid-2
             - @investments.each do |investment|
