--- a/app/views/users/_head.html.slim
+++ b/app/views/users/_head.html.slim
@@ -3,14 +3,17 @@
     .person
       .row
         .small-4.medium-3.columns
-          = image_tag @user.avatar.image_url
+          = image_tag @user.avatar_url
         .small-8.medium-9.columns
           .name
             = link_to @user.name, user_path(@user)
           .job-title 
             = @user.try(:title)
-          .description 
-            = @user.description
+          .description
+            - if @user.description.blank?
+              | 暂无描述
+            - else
+              = @user.description
           - if current_user == @user
             .edit
               = link_to '编辑', settings_profile_path
