--- a/app/views/refine/index.html.slim
+++ b/app/views/refine/index.html.slim
@@ -7,4 +7,7 @@
   .refine-projects-content
     .row
       .small-12.large-10.large-centered.columns
-        = render partial: 'refine_project', collection: @recommends, as: :recommend
+        - if @recommends.blank?
+          p.no-content 暂无推荐项目
+        - else
+          = render partial: 'refine_project', collection: @recommends, as: :recommend
