--- a/app/assets/stylesheets/trend.css.scss
+++ b/app/assets/stylesheets/trend.css.scss
@@ -1,5 +1,5 @@
 .trend {
-  h1, h2 {
+  h1, h2, h3 {
     border-bottom: 1px solid #ddd;
     margin-bottom: 2rem;
   }
@@ -8,5 +8,10 @@
     text-align: center;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
+  }
+
+  .new-stars, .new-invests, .new-talks {
+    margin-top: -1rem;
+    color: #999;
   }
 }
