添加 about, service 页面

--- a/app/views/about/index.html.slim
+++ b/app/views/about/index.html.slim
@@ -1,3 +1,7 @@
-div.row.project.contianer
-  div.large-12.columns
-    h1 About Me
+- content_for(:title) do
+  | 关于我们
+
+.row.top-blank
+  .small-12.columns
+    h2 关于我们
+    p 我们的公司名字为创业赢, 顾名思义, 是为了服务于创业团队的股权融资, 以及找到合适的人而存在的.
