--- a/app/views/money_requires/admin.html.slim
+++ b/app/views/money_requires/admin.html.slim
@@ -18,7 +18,7 @@
               | 1. 融资预热
           li
             a ng-class='{ active: money_require.status == "leader_needed" }'
-              | 2. 寻找领投人
+              | 2. 预热中
           li
             a ng-class='{ active: money_require.status == "leader_need_confirmed" }'
               | 3. 领投人确认
@@ -62,16 +62,22 @@
             small.error ng-show='money_require.errors.maxnp' {{ money_require.errors.maxnp }}
           .small-1.large-1.end.columns
             span.postfix 人
-
-
+        p.alert 以上填入你的期望值, 在融资开始前均可以修改.
         button.ng-cloak ng-hide='money_require.id' 创建并预热
         button.ng-cloak ng-show='money_require.id'  开始预热
   .row.ng-cloak ng-show='money_require.status == "leader_needed"'
     .small-12.large-10.large-centered.columns
+      h4.title 融资预热中, 你可以:
       p
-        | 通过线上或线下寻找合适的领投人, 当找到后请在以下邀请他(她)成为项目的领投人.
+        ul
+          li
+            p
+              | 预热融资, 联系平台上优秀的 
+              = link_to '投资人', investors_path, target: '_blank'
+          li
+            p 找到领投人, 键入他的平台名字或邮箱确认融资条款
       p.alert
-        | 注意: 一旦邀请, 无法修改.
+        | 注意: 一旦邀请, 无法修改, 请确认后再键入.
       form ng-submit='add_leader()'
         .leader
           person ng-show='selected_leader()' user='autocomplete_user'
