--- a/app/assets/templates/directives/invest_button.html.slim
+++ b/app/assets/templates/directives/invest_button.html.slim
@@ -29,6 +29,49 @@ script type='text/ng-template' id='syndicate.html'
       hr
       form ng-submit='syndicate()'
 
+        p ng-show='behave() == "leader_confirm"'
+          h4 融资信息确认
+          .row
+            .small-3.medium-2.columns
+              label for="money" class="right inline" 融资数值
+            .small-9.medium-10.columns
+              .row.collapse
+                .small-1.columns
+                  span.prefix ¥
+                .small-11.medium-8.large-6.end.columns
+                  input type='text' id='money' ng-model='opened.money' readonly=''
+          .row
+            .small-3.medium-2.columns
+              label for="share" class="right inline" 出让股份
+            .small-9.medium-10.columns
+              .row.collapse
+                .small-10.medium-3.columns
+                  input type='text' id='share' ng-model='opened.share' readonly=''
+                .small-2.large-1.end.columns
+                  span.postfix %
+          .row
+            .small-3.medium-2.columns
+              label for='deadline' class="right inline" 融资周期
+            .small-9.medium-10.columns
+              .row.collapse
+                .small-10.medium-3.columns
+                  input type='text' id='deadline' ng-model='opened.deadline' readonly=''
+                .small-2.large-1.end.columns
+                  span.postfix 天
+          .row
+            .small-3.medium-2.columns
+              label for='maxnp' class="right inline" 限制最大人数
+            .small-9.medium-10.columns
+              .row.collapse
+                .small-10.medium-3.columns
+                  input type='text' id='maxnp' ng-model='opened.maxnp' readonly=''
+                .small-2.large-1.end.columns
+                  span.postfix 人
+          .row
+            .small-9.small-offset-3.medium-10.medium-offset-2.columns
+              p.alert 以上信息如与你线下谈的不一致, 请不要确认投资, 马上与创始人确认.
+
+        h4 同意并启动第一笔投资
         p.alert ng-show='hash.already_message'
           | {{ hash.already_message }}
         p.min-money
