--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -33,12 +33,20 @@
     }
 
     .content-wrapper {
+      line-height: 1.5rem;
 
       .created-at {
-        float: right;
         color: #999;
         font-size: 90%;
+        @media #{$medium-up} {
+          float: right;
+        }
+
+        @media #{$small-only} {
+          margin-left: 0.5rem;
+        }
       }
+
     }
 
     .head, .foot {
