探索 -> 发现项目

--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -24,7 +24,7 @@ li
   = link_to explore_index_path do
     - unless top
       i.fi-eye
-    | 探索
+    | 发现项目
 li
   = link_to investors_path do
     - unless top
