--- a/app/assets/stylesheets/components/invest.css.scss
+++ b/app/assets/stylesheets/components/invest.css.scss
@@ -85,7 +85,8 @@
   }
 
   .invest-leader {
-    margin: 1rem 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     .name {
       padding-bottom: 0.5rem;
     }
